# KMC

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  COPYING  Makefile  Makefile.am  Makefile.in  README.md  build_release.py  config.h.in  config.status  configure  configure.ac  definitions.h  kmc.sln  kmc_dump  kmer_counter.sln  kmer_counter.sln.bak  makefile  makefile_mac  makefile_old  readme.txt
.github/workflows/: main.yml  self-hosted.yml
CMakeConfigs/: KMCArchive.cmake  KMCPackage.cmake  KMCPreprocessor.cmake  definitions.h.in
api/: CMakeLists.txt  kmc_file.h  kmer_api.cpp
cmake/: KMCBuildOptions.cmake  KMCConfig.cmake  KMCExternalImports.cmake  KMCPackageExport.cmake  KMCPackageOptions.cmake  config.cmake
core/: CMakeLists.txt  develop.h  kb_sorter.h  kmer.h  meta_oper.h  s_mapper.h
core/source/: develop.cpp  kb_completer.cpp  mem_disk_file.cpp  radix.cpp  timer.cpp
count/: CMakeLists.txt  kmc_count.cpp
doc/kmc_tools/: complex.tex  filter_operation.tex  intro.tex  kmc_tools.tex  simple.tex  transform.tex  usage.tex
dump/: CMakeLists.txt  kmc_dump.cpp  nc_utils.cpp
kmc/: CMakeLists.txt  definitions.h
kmc-CLI/: kmc-CLI.vcxproj  kmc.cpp
kmc/api/: CMakeLists.txt  kmc_file.cpp  kmc_file.h  kmer_api.cpp  kmer_api.h  mmer.cpp  mmer.h
kmc/core/: CMakeLists.txt  bkb_merger.h  bkb_reader.cpp  bkb_reader.h  bkb_sorter.h  bkb_writer.cpp  bkb_writer.h  develop.cpp  develop.h  fastq_reader.cpp  fastq_reader.h  kb_collector.h  kb_completer.cpp  kb_completer.h  kb_reader.h  kb_sorter.h  kb_storer.cpp  kb_storer.h  kmc.h  kmc_typedefs.h  kmer.cpp  kmer.h  kmer_counter.cpp  kxmer_set.h  mem_disk_file.cpp  mem_disk_file.h  mmer.cpp  mmer.h  params.h  queues.h  radix.cpp  radix.h  rev_byte.cpp  rev_byte.h  s_mapper.h  splitter.h  timer.cpp  timer.h
kmc/count/: CMakeLists.txt  kmc_count.cpp
kmc/dump/: CMakeLists.txt  kmc_dump.cpp  nc_utils.cpp  nc_utils.h
kmc/sample/: CMakeLists.txt  kmc_dump_sample.cpp
kmc_CLI/: CMakeLists.txt  kmc.cpp  kmc_CLI.vcxproj
kmc_api/: CMakeLists.txt  kmc_file.cpp  kmc_file.h  kmer_api.cpp  kmer_api.h  kmer_defs.h  mmer.cpp  mmer.h  murmur64_hash.h  sig_to_bin_map.h  stdafx.h
kmc_api/cmake/: config.cmake  definitions.h.in
kmc_core/: CMakeLists.txt  asmlib_wrapper.h  bam_utils.h  binary_reader.h  bkb_merger.h  bkb_reader.cpp  bkb_reader.h  bkb_sorter.h  bkb_subbin.h  bkb_uncompactor.h  bkb_writer.cpp  bkb_writer.h  cpu_info.cpp  cpu_info.h  critical_error_handler.h  defs.h  develop.cpp  develop.h  exception_aware_thread.h  fastq_reader.cpp  fastq_reader.h  first_dispatch.h  intr_copy.h  kb_collector.cpp  kb_collector.h  kb_completer.cpp  kb_completer.h  kb_reader.h  kb_sorter.h  kb_storer.cpp  kb_storer.h  kff_writer.cpp  kff_writer.h  kmc.h  kmc_core.vcxproj  kmc_core.vcxproj.filters  kmc_runner.cpp  kmc_runner.h  kmer.cpp  kmer.h  (+28 more)
kmc_core/libs/ntHash/: ntHashWrapper.h
kmc_core/source/: bkb_reader.cpp  bkb_writer.cpp  develop.cpp  fastq_reader.cpp  kb_completer.cpp  kb_storer.cpp  kmer.cpp  kmer_counter.cpp  mem_disk_file.cpp  mmer.cpp  radix.cpp  rev_byte.cpp  timer.cpp
kmc_count/: CMakeLists.txt  kmc_count.cpp
kmc_counter/: CMakeLists.txt  kmc_counter.cpp
kmc_dump/: CMakeLists.txt  kmc_dump.cpp  kmc_dump.vcxproj  nc_utils.cpp  nc_utils.h  stdafx.cpp
kmc_dump_sample/: CMakeLists.txt  kmc_dump_sample.cpp  kmc_dump_sample.vcxproj  stdafx.cpp
kmc_tools/: CMakeLists.txt  asmlib_wrapper.h  bundle.h  check_kmer.h  config.h  db_writer.h  db_writer_factory.h  defs.h  dump_writer.h  expression_node.h  fastq_filter.cpp  fastq_filter.h  fastq_reader.cpp  fastq_reader.h  fastq_writer.cpp  fastq_writer.h  histogram_writer.h  kff_db_reader.h  kff_db_writer.h  kff_info_reader.cpp  kff_info_reader.h  kff_kmc2_reader_utils.h  kff_random_access.h  kmc1_db_reader.h  kmc1_db_writer.h  kmc2_db_reader.h  kmc_header.cpp  kmc_header.h  kmc_tools.cpp  kmc_tools.vcxproj  kmc_tools.vcxproj.filters  kmer.h  kmer_file_header.cpp  kmer_file_header.h  meta_oper.h  nc_utils.cpp  nc_utils.h  operations.h  output_parser.h  parameters_parser.cpp  (+12 more)
kmcdb/: bin_metadata.h  bin_readers.h  bin_writers.h  capture_ostream.h  capture_sys_hw_cmd.h  hashers.h  kmcdb.h  kmer.h  kmer_to_bin_id.h  metadata.h  metadata_reader.h  mmer.h  readers.h  stream_names.h  utils.h  writers.h
kmer_counter/: CMakeLists.txt  asmlib_wrapper.h  bam_utils.h  binary_reader.h  bkb_merger.h  bkb_reader.cpp  bkb_reader.h  bkb_sorter.h  bkb_subbin.h  bkb_uncompactor.h  bkb_writer.cpp  bkb_writer.h  cpu_info.cpp  cpu_info.h  definitions.h  defs.h  develop.cpp  develop.h  fastq_reader.cpp  fastq_reader.h  first_dispatch.h  intr_copy.h  kb_collector.cpp  kb_collector.h  kb_completer.cpp  kb_completer.h  kb_reader.h  kb_sorter.h  kb_storer.cpp  kb_storer.h  kff_writer.cpp  kff_writer.h  kmc.h  kmer.cpp  kmer.h  kmer_counter.cpp  kmer_counter.vcxproj  kmer_counter.vcxproj.filters  kxmer_set.h  mem_disk_file.cpp  (+28 more)
kmer_counter/libs/: asmlib.h  libacof64.lib  libbzip2.lib
kmer_counter/libs/vectorclass/: dispatch_example.cpp  instrset.h  instrset_detect.cpp  vectorclass.h  vectorf128.h  vectorf256.h  vectorf256e.h  vectorf512.h  vectorf512e.h  vectori128.h  vectori256.h  vectori256e.h  vectori512.h  vectori512e.h  vectormath_common.h  vectormath_exp.h  vectormath_hyp.h  vectormath_lib.h  vectormath_trig.h
kmer_counter/source/: bkb_reader.cpp  bkb_writer.cpp  fastq_reader.cpp  kb_completer.cpp  kb_storer.cpp  kmer_counter.cpp  mem_disk_file.cpp  rev_byte.cpp
m4/: ax_cxx_compile_stdcxx.m4
py_kmc_api/: CMakeLists.txt  py_kmc_api.cpp  py_kmc_api.vcxproj  py_kmc_dump.py  set_path.bat
sample/: CMakeLists.txt  kmc_dump_sample.cpp
src/kmc_api/: kmer_api.h  mmer.cpp  mmer.h
src/kmc_cli/: kmc_CLI.vcxproj.filters
src/kmc_core/: bam_utils.h  bkb_reader.cpp  bkb_reader.h  bkb_sorter.h  bkb_subbin.h  bkb_uncompactor.h  bkb_writer.h  cpu_info.cpp  kmc.h  (+28 more)
test-merge/: compile.sh  data.txt  merge-v1.cpp  merge-v2-min-hash.cpp  merge-v2.cpp  merge.cpp  run-check-ckmer-api.sh  run-min-hash.sh  run.sh  test-ckmer-in-api.cpp  test-merge.sln  test-merge.vcxproj  test-merge.vcxproj.filters
(+158 files in other folders)
