cmake_minimum_required (VERSION 2.8 FATAL_ERROR)

set (PROJECT_NAME "KMC")
project (${PROJECT_NAME} C CXX)
set (PROJECT_VERSION_MAJOR 2)
set (PROJECT_VERSION_MINOR 2)
set (PROJECT_VERSION_PATCH 0)
set (PROJECT_VERSION_TWEAK 20150415)
set (PROJECT_VERSION ${PROJECT_VERSION_MAJOR}.${PROJECT_VERSION_MINOR}.${PROJECT_VERSION_PATCH})
set (PROJECT_VENDOR "REFRESH Bioinformatics Group")
set (PROJECT_DESCRIPTION "a utility designed for counting k-mers in a set of reads from genome sequencing projects")
set (PROJECT_WEBSITE "http://sun.aei.polsl.pl/REFRESH/index.php?page=projects-kmc")
set (PROJECT_SOURCE "https://github.com/marekkokot/KMC")
set (PROJECT_AUTHOR_NAME "Marek Kokot")
set (PROJECT_AUTHOR_EMAIL "Marek.Kokot@polsl.pl")

message (STATUS "KMC Version: ${PROJECT_VERSION}")
message (STATUS "KMC Release Date: ${PROJECT_VERSION_TWEAK}")

find_package (OpenMP REQUIRED)
SET (CMAKE_CXX_FLAGS  "${CMAKE_C_FLAGS} ${OpenMP_C_FLAGS}")
SET (CMAKE_CXX_FLAGS  "${CMAKE_CXX_FLAGS} ${OpenMP_CXX_FLAGS}")
SET (CMAKE_CXX_FLAGS  "${CMAKE_CXX_FLAGS} -std=c++11")

option (KMC_BUILD_WITH_ASM "Build KMC with ASM library included" ON)
option (KMC_BUILD_WITH_DEBUG "Build KMC with debug mode on" OFF)
option (KMC_BUILD_WITH_DEVELOP "Build KMC with developer mode on" OFF)
option (KMC_INSTALL_RUNTIME "Build make isntall target to include KMC executables" ON)
option (KMC_INSTALL_ARCHIVE "Build make isntall target to include KMC headers and as a static library" OFF)
option (KMC_INSTALL_PACKAGE "Build make isntall target to include KMC package configuration for FindPacakge" OFF)
mark_as_advanced (KMC_BUILD_ARCHIVE KMC_ENABLE_DEBUG KMC_ENABLE_DEVELOP)

set (INSTALL_INCLUDE_DIR include CACHE PATH "Installation directory for header files")
set (INSTALL_RUNTIME_DIR bin CACHE PATH "Installation directory for executables")
set (INSTALL_ARCHIVE_DIR lib CACHE PATH "Installation directory for static libraries")
set (INSTALL_PACKAGE_DIR lib/cmake CACHE PATH "Installation directory for cmake package configuration")
mark_as_advanced (INSTALL_INCLUDE_DIR INSTALL_RUNTIME_DIR INSTALL_ARCHIVE_DIR)

include (CMakeConfigs/KMCPreprocessor.cmake)
include (CMakeConfigs/KMCArchive.cmake)
include (CMakeConfigs/KMCPackage.cmake)

add_subdirectory (kmc_api)
add_subdirectory (kmc_core)
add_subdirectory (kmc_count)
add_subdirectory (kmc_dump)
add_subdirectory (kmc_dump_sample)
