set (KMC_API_INCLUDES
	${CMAKE_CURRENT_SOURCE_DIR}/kmc_file.h
	${CMAKE_CURRENT_SOURCE_DIR}/kmer_api.h
	${CMAKE_CURRENT_SOURCE_DIR}/mmer.h)

set (KMC_API_SOURCES
	${CMAKE_CURRENT_SOURCE_DIR}/kmc_file.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/kmer_api.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/mmer.cpp)

add_library (kmc_api STATIC ${KMC_API_INCLUDES} ${KMC_API_SOURCES})
set_target_properties (kmc_api PROPERTIES VERSION ${KMC_VERSION})
set_target_properties (kmc_api PROPERTIES SOVERSION ${KMC_SOVERSION})

install (TARGETS kmc_api
	EXPORT KMCTargets
	LIBRARY DESTINATION ${INSTALL_LIBRARY_DIR}
	ARCHIVE DESTINATION ${INSTALL_ARCHIVE_DIR}
	RUNTIME DESTINATION ${INSTALL_RUNTIME_DIR}
	INCLUDES DESTINATION ${INSTALL_INCLUDE_DIR})
